# schemeKV

./: .gitignore  README.md  main.hs  schemeKV.cabal
src/: client.scm  kv.scm  server.scm  stdlib.scm
