cabal-version:      2.4
name:               schemeKV
version:            0.1.0.0

executable scheme
    main-is:          main.hs

    build-depends:    base ^>=4.14.3.0,
                      unordered-containers,
		      parsec,
                      mtl,
		      hashtables,
		      hashable,
                      network,
                      bytestring,
                      utf8-string,
                      split
    hs-source-dirs:   .
    default-language: Haskell2010
